--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
-          <a href="https://ieeexplore.ieee.org/document/10521750" class="thumbnail">
+          <a href="https://ieeexplore.ieee.org/abstract/document/11150765" class="thumbnail">
             <img src="images/framework.png" alt="framework">
           </a>
           <div class="project-description">
-            <h3><a href="https://ieeexplore.ieee.org/document/10521750">One-Shot Demonstration for Slicing and Cutting Everyday Food Items</a></h3>
+            <h3><a href="https://ieeexplore.ieee.org/abstract/document/11150765">One-Shot Demonstration for Slicing and Cutting Everyday Food Items</a></h3>
             <p>
               <b>Yi Liu</b>, Andreas Verleysen, Francis Wyffels<br>
               <i>IEEE Robotics and Automation Letters</i><br>
-              <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10521750">PDF</a>
+              <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=11150765">PDF</a>
             </p>
           </div>
         </div>
