--- a/index.html
+++ b/index.html
@@ -189,6 +189,17 @@
         <div class="list-item misc" data-category="misc">
           <p class="date">2024</p>IROS Oral Presentation <a href="https://ieeexplore.ieee.org/document/10521750">Compliant Robust Control for Robotic Insertion of Soft Bodies (Transferred from RA-L)</a>
         </div>
+        <div class="list-item misc" data-category="misc">
+          <p class="date">2025</p>CRAS contribution paper <a href="https://openreview.net/forum?id=CN2Zr3ZYHF">Lightweight Haptic Feedback for Teleoperation of Continuum Surgical Robots
+Based Solely on Actuation-Side Data</a> 
+        </div>
+        <div class="list-item misc" data-category="misc">
+          <p class="date">2025</p>CRAS contribution paper <a href="https://openreview.net/forum?id=CN2Zr3ZYHF">Control of Continuum Surgical Robots based on Deep Reinformcement Learning</a> 
+        </div>
+        <div class="list-item misc" data-category="misc">
+          <p class="date">2025.03</p>I'm going to the Medical Robotics Laboratory of University of Southern Denmark-MMMI for exchange study as Guest PhD Student.
+        </div>
+        
 
         <!-- Footer -->
         <div id="footer">
