--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ Based Solely on Actuation-Side Data</a>
           <p class="date">2025</p>CRAS contribution paper <a href="https://openreview.net/forum?id=CN2Zr3ZYHF">Control of Continuum Surgical Robots based on Deep Reinformcement Learning</a> 
         </div>
         <div class="list-item misc" data-category="misc">
-          <p class="date">2025.03</p>I'm going to the Medical Robotics Laboratory of University of Southern Denmark-MMMI for exchange study as Guest PhD Student.
+          <p class="date">2025.03</p></p>I'm going to the Medical Robotics Laboratory of University of Southern Denmark-MMMI for exchange study as Guest PhD Student.
         </div>
         
 
