--- a/index.html
+++ b/index.html
@@ -69,6 +69,20 @@
 
         <!-- Publications -->
         <div class="list-item publication" data-category="publication">
+          <a href="https://ieeexplore.ieee.org/document/11224760" class="thumbnail">
+            <img src="images/allflow-1.png" alt="gentlegrasping">
+          </a>
+          <div class="project-description">
+            <h3><a href="https://ieeexplore.ieee.org/document/11224760">Gentle Grasping: A Method with Low-Cost Magnetic Tactile Sensors</a></h3>
+            <p>
+              <b>Yi Liu</b>, Remko Proesmans, Andreas Verleysen, Francis wyffels<br>
+              <i>IEEE Access</i><br>
+              <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=11224760">PDF</a>
+            </p>
+          </div>
+        </div>
+
+        <div class="list-item publication" data-category="publication">
           <a href="https://ieeexplore.ieee.org/abstract/document/11150765" class="thumbnail">
             <img src="images/framework.png" alt="framework">
           </a>
@@ -197,15 +211,18 @@ Based Solely on Actuation-Side Data</a>
           <p class="date">2025</p>CRAS contribution paper <a href="https://openreview.net/forum?id=CN2Zr3ZYHF">Control of Continuum Surgical Robots based on Deep Reinformcement Learning</a> 
         </div>
         <div class="list-item misc" data-category="misc">
-          <p class="date">2025.03</p></p>I'm going to the Medical Robotics Laboratory of University of Southern Denmark-MMMI for exchange study as Guest PhD Student.
+          <p class="date">2025</p></p>I'm going to the Medical Robotics Laboratory of University of Southern Denmark-MMMI for exchange study as Guest PhD Student.
+        </div>
+        <div class="list-item misc" data-category="misc">
+          <p class="date">2025</p></p> Best Paper Award Finalist at <a href="https://airo.ugent.be/news/iros25/">the IROS 2025 Workshop - Embodied Intelligence for Medical Robotics: Learning, Adaption, and Interaction</a> 
         </div>
         
 
         <!-- Footer -->
-        <div id="footer">
+        <!-- <div id="footer">
           Feel free to download this website's <a href="https://github.com/0707yiliu/0707yiliu.github.io">template</a>, just add a link back to my website. 
           Inspired by <a href="https://andyzeng.github.io/">Andy's website</a>.
-        </div>
+        </div> -->
       </div>
     </div>
 
